[gd_scene load_steps=2 format=3 uid="uid://yn0ar2af2542"]

[ext_resource type="Script" uid="uid://blb1lgh6lkuji" path="res://components/enchantment_cursor_detection_component.gd" id="1_wlqvn"]

[node name="EnchantmentCursorDetectionComponent" type="Area2D"]
collision_mask = 3
script = ExtResource("1_wlqvn")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
